# full-stack-project-template

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
backend/: README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/scripts/: export_openapi.py
backend/tests/: test_hello.py
frontend/: biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: hello.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
